# Litex-CNC-module-template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
litexcnc_{{cookiecutter.module_slug}}/: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml
litexcnc_{{cookiecutter.module_slug}}/.github/workflows/: python-publish.yml
litexcnc_{{cookiecutter.module_slug}}/docs/src/: conf.py  index.rst  readme.rst
litexcnc_{{cookiecutter.module_slug}}/src/litexcnc/driver/modules/: litexcnc_{{cookiecutter.module_slug}}.c  litexcnc_{{cookiecutter.module_slug}}.h
litexcnc_{{cookiecutter.module_slug}}/src/litexcnc/firmware/modules/: {{cookiecutter.module_slug}}.py
litexcnc_{{cookiecutter.module_slug}}/src/litexcnc_{{cookiecutter.module_slug}/firmware/: {{cookiecutter.module_slug}}.py
litexcnc_{{cookiecutter.module_slug}}/src/litexcnc_{{cookiecutter.module_slug}}/driver/: litexcnc_{{cookiecutter.module_slug}}.c  litexcnc_{{cookiecutter.module_slug}}.h
litexcnc_{{cookiecutter.module_slug}}/src/litexcnc_{{cookiecutter.module_slug}}/firmware/: {{cookiecutter.module_slug}}.py
